terraform/kubernetes/07-ingress/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-api-ingress-grafana
  namespace: github-api-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/priority: "100"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /grafana(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: grafana
                port:
                  number: 3000
