terraform/kubernetes/07-ingress/ingress-kafka-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-api-ingress-kafka-ui
  namespace: github-api-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/priority: "100"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /kafka-ui(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: kafka-ui
                port:
                  number: 8080
