terraform/kubernetes/07-ingress/ingress-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-api-ingress-prometheus
  namespace: github-api-dev
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/priority: "100"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /prometheus(/.*)?
            pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
